--- a/wwwdj/templates/base.html
+++ b/wwwdj/templates/base.html
@@ -43,13 +43,35 @@
         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
         <path d="M5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3z"/>
       </symbol>
+      <symbol id="chevron-left" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+      </symbol>
+      <symbol id="chevron-right" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
+      </symbol>
+      <symbol id="check-lg" viewBox="0 0 16 16">
+        <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+      </symbol>
     </svg>
     <div class="container mt-5">
       <div class="row d-flex justify-content-between pb-3 border-bottom mb-4">
-        <div class="col-10">
+        <div class="col-9">
           <h1>Vidicode Timesheets</h1>
         </div>
         {% if request.user.is_authenticated %}
+        {% if request.user.is_staff %}
+        <div class="col-auto mt-2">
+        {% if not "staff" in request.path %}
+        <a href="{% url 'staff_dashboard' %}" class="btn btn-light" type="button">
+          Staff panel
+        </a>
+        {% else %}
+        <a href="{% url 'dashboard' %}" class="btn btn-light" type="button">
+          Personal dashboard
+        </a>
+        {% endif %}
+        </div>
+        {% endif %}
         <div class="col-auto mt-2">
           <div class="dropdown">
             <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
