--- a/wwwdj/templates/pages/dashboard.html
+++ b/wwwdj/templates/pages/dashboard.html
@@ -37,12 +37,13 @@ Dashboard | Vidicode Timesheets
 <table class="table table-dark table-bordered table-striped mt-2">
   <thead>
     <tr>
-      <th scope="col" style="width: 5%;">Day</th>
+      <th scope="col" style="width: 10%;">Day</th>
+      <th scope="col" style="width: 10%;">Project</th>
       <th scope="col" style="width: 8%;">Start Time</th>
       <th scope="col" style="width: 8%;">Finish Time</th>
       <th scope="col" style="width: 9%;">Total Hours</th>
       <th scope="col" style="width: 7%;">Earnings</th>
-      <th scope="col" style="width: 50%;">Work Summary</th>
+      <th scope="col" style="width: 40%;">Work Summary</th>
       <th scope="col" class="text-center" style="width: 10%;">Actions</th>
     </tr>
   </thead>
@@ -53,6 +54,12 @@ Dashboard | Vidicode Timesheets
         {{ workday.0 }}
         <span class="small">{{ workday.0.date|date:"d.m.y" }}</span>
       </th>
+      <td>
+        {% for record in workday.1 %}
+        {{ record.project }}
+        <br>
+        {% endfor %}
+      </td>
       <td>
         {% for record in workday.1 %}
         {{ record.start_time|date:"G:i" }}
@@ -70,22 +77,11 @@ Dashboard | Vidicode Timesheets
       <td>{{ workday.2 }}</td>
       <td>${{ workday.3 }}</td>
       <td>
-        <table class="table table-dark mb-0">
-          <thead>
-            <tr>
-              <th scope="col" style="width: 25%;">Project</th>
-              <th scope="col" style="width: 75%;">Summary</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for summary in workday.4 %}
-            <tr>
-              <th scope="row">{{ summary.project }}</th>
-              <td>{{ summary.summary }}</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+        {% for record in workday.4 %}
+        {% if record.summary %}
+        {{ record.summary }}
+        {% endif %}
+        {% endfor %}
       </td>
       <td class="align-middle text-center">
         {% if workday.1 %}
@@ -178,12 +174,13 @@ Dashboard | Vidicode Timesheets
 <table class="table table-dark table-bordered table-striped mt-2">
   <thead>
     <tr>
-      <th scope="col" style="width: 5%;">Day</th>
+      <th scope="col" style="width: 10%;">Day</th>
+      <th scope="col" style="width: 10%;">Project</th>
       <th scope="col" style="width: 8%;">Start Time</th>
       <th scope="col" style="width: 8%;">Finish Time</th>
       <th scope="col" style="width: 9%;">Total Hours</th>
       <th scope="col" style="width: 7%;">Earnings</th>
-      <th scope="col" style="width: 50%;">Work Summary</th>
+      <th scope="col" style="width: 40%;">Work Summary</th>
       <th scope="col" class="text-center" style="width: 10%;">Actions</th>
     </tr>
   </thead>
@@ -196,7 +193,14 @@ Dashboard | Vidicode Timesheets
       </th>
       <td>
         {% for record in workday.1 %}
+        {{ record.project }}
+        <br>
+        {% endfor %}
+      </td>
+      <td>
+        {% for record in workday.1 %}
         {{ record.start_time|date:"G:i" }}
+        <br>
         {% endfor %}
       </td>
       <td>
@@ -209,22 +213,12 @@ Dashboard | Vidicode Timesheets
       <td>{{ workday.2 }}</td>
       <td>${{ workday.3 }}</td>
       <td>
-        <table class="table table-dark mb-0">
-          <thead>
-            <tr>
-              <th scope="col" style="width: 25%;">Project</th>
-              <th scope="col" style="width: 75%;">Summary</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for summary in workday.4 %}
-            <tr>
-              <th scope="row">{{ summary.project }}</th>
-              <td>{{ summary.summary }}</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+        {% for record in workday.4 %}
+        {% if record.summary %}
+        {{ record.summary }}
+        {% endif %}
+        <br>
+        {% endfor %}
       </td>
       <td class="align-middle text-center">
         {% if workday.1 %}
