--- a/wwwdj/templates/pages/staff/totals.html
+++ b/wwwdj/templates/pages/staff/totals.html
@@ -2,6 +2,8 @@
 
 {% block tab_content %}
 <div class="col-10">
+  {% for key, value in work_records.items %}
+  <h4>{{ key }}</h4>
   <table class="table table-dark table-bordered table-striped mt-2">
     <thead>
       <tr>
@@ -12,7 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for record in work_records %}
+      {% for record in value.records %}
       <tr>
         <td>
           {{ record.0 }}
@@ -30,16 +32,30 @@
       {% endfor %}
     </tbody>
   </table>
+  <div class="mt-1">
+    <div class="row justify-content-between mb-5">
+      <div class="col-auto">
+        <h5>Project Total:</h5>
+      </div>
+      <div class="col-auto">
+        <h6>{{ value.meta.total_hours }} hours</h6>
+      </div>
+      <div class="col-auto">
+        <h6>${{ value.meta.total_earnings }}</h6>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
   <hr class="mt-5">
   <div class="row justify-content-between mb-5">
     <div class="col-auto">
-      <h4>Session Total:</h4>
+      <h3>Session Total:</h3>
     </div>
     <div class="col-auto">
-      <h5>{{ session_total_hours }} hours</h5>
+      <h4>{{ session_total_hours }} hours</h4>
     </div>
     <div class="col-auto">
-      <h5>${{ session_total_earnings }}</h5>
+      <h4>${{ session_total_earnings }}</h4>
     </div>
   </div>
 </div>
