--- a/wwwdj/templates/pages/staff/totals.html
+++ b/wwwdj/templates/pages/staff/totals.html
@@ -1,8 +1,11 @@
 {% extends "pages/staff/dashboard.html" %}
 
+{% load service_tags %}
+
 {% block tab_content %}
 {% for key, value in work_records.items %}
-<h4>{{ key }}</h4>
+{% is_project_invoiced key session as invoiced %}
+<h4>{{ key.name }} {% if invoiced %}<a href="{% url 'download_invoice' session.pk key.pk %}" class="btn btn-success">Invoiced</a>{% endif %}</h4>
 <table class="table table-dark table-bordered table-striped mt-2">
   <thead>
     <tr>
