--- a/wwwdj/templates/pages/dashboard.html
+++ b/wwwdj/templates/pages/dashboard.html
@@ -18,17 +18,27 @@ Dashboard | Vidicode Timesheets
 <div class="modal fade" id="startWorkModal" tabindex="-1" aria-labelledby="startWorkModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content bg-dark">
-      <div class="modal-header">
-        <h5 class="modal-title" id="startWorkModalLabel">Confirm work start?</h5>
-      </div>
-      <div class="modal-body">
-        After your confirmation the timer will be started
-        and new record will be created on current date
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-        <a class="btn btn-success" href="{% url 'start_work' %}">Confirm</a>
-      </div>
+      <form action="{% url 'start_work' %}" method="POST">
+        {% csrf_token %}
+        <div class="modal-header">
+          <h5 class="modal-title" id="startWorkModalLabel">Select a project</h5>
+        </div>
+        <div class="modal-body">
+          After your confirmation the timer will be started
+          and new record will be created on current date
+          <label for="project-select" class="form-label">Select a Project you are working on:</label>
+          <select class="form-select bg-dark text-light mb-3" name="project" required>
+            <option value="" selected>Select a Project</option>
+            {% for project in projects %}
+            <option value="{{ project.pk }}">{{ project.name }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-success">Confirm</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
@@ -43,7 +53,7 @@ Dashboard | Vidicode Timesheets
       <th scope="col" style="width: 8%;">Finish Time</th>
       <th scope="col" style="width: 9%;">Total Hours</th>
       <th scope="col" style="width: 7%;">Earnings</th>
-      <th scope="col" style="width: 40%;">Work Summary</th>
+      <th scope="col" style="width: 35%;">Work Summary</th>
       <th scope="col" class="text-center" style="width: 10%;">Actions</th>
     </tr>
   </thead>
@@ -57,29 +67,30 @@ Dashboard | Vidicode Timesheets
       <td>
         {% for record in workday.1 %}
         {{ record.project }}
-        <br>
+        <hr class="my-1">
         {% endfor %}
       </td>
       <td>
         {% for record in workday.1 %}
         {{ record.start_time|date:"G:i" }}
-        <br>
+        <hr class="my-1">
         {% endfor %}
       </td>
       <td>
         {% for record in workday.1 %}
         {% if record.finish_time %}
         {{ record.finish_time|date:"G:i" }}
+        <hr class="my-1">
         {% endif %}
-        <br>
         {% endfor %}
       </td>
       <td>{{ workday.2 }}</td>
       <td>${{ workday.3 }}</td>
       <td>
-        {% for record in workday.4 %}
+        {% for record in workday.1 %}
         {% if record.summary %}
         {{ record.summary }}
+        <hr class="my-1">
         {% endif %}
         {% endfor %}
       </td>
@@ -92,29 +103,33 @@ Dashboard | Vidicode Timesheets
         <div class="modal fade" id="stopWorkModal" tabindex="-1" aria-labelledby="stopWorkModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered text-start">
             <div class="modal-content bg-dark">
-              <div class="modal-header">
-                <h5 class="modal-title" id="stopWorkModalLabel">Confirm work stop?</h5>
-              </div>
-              <div class="modal-body">
-                After your confirmation the timer will be stopped
-                and time of finish will be recorded, total hours and earnings also will be counted and recorded
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                <a class="btn btn-success" href="{% url 'stop_work' workday.1.last.id %}">Confirm</a>
-              </div>
+              <form action="{% url 'stop_work' workday.1.last.id %}" method="POST">
+                {% csrf_token %}
+                <div class="modal-header">
+                  <h5 class="modal-title" id="stopWorkModalLabel">Enter work summary</h5>
+                </div>
+                <div class="modal-body">
+                  After your confirmation the timer will be stopped
+                  and time of finish will be recorded, total hours and earnings also will be counted and recorded
+                  <textarea name="summary" class="form-control bg-dark text-white mt-2" cols="30" rows="10" placeholder="Feature: Summary" required></textarea>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-success">Confirm</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
         {% endif %}
-        <button class="btn btn-sm btn-outline-light" data-bs-toggle="modal" data-bs-target="#editWorkModal_{{ workday.0.pk }}">
+        <button class="btn btn-sm btn-outline-light" data-bs-toggle="modal" data-bs-target="#selectRecordEditModal_{{ workday.0.pk }}">
           <svg class="bi mb-1" fill="currentColor" width="16" height="16"><use xlink:href="#pencil-square"></use></svg>
         </button>
-        <div class="modal fade" id="editWorkModal_{{ workday.0.pk }}" tabindex="-1" aria-labelledby="editWorkModalLabel_{{ workday.0.pk }}" aria-hidden="true">
+        <div class="modal fade" id="selectRecordEditModal_{{ workday.0.pk }}" tabindex="-1" aria-labelledby="selectRecordEditModalLabel_{{ workday.0.pk }}" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered text-start">
             <div class="modal-content bg-dark">
               <div class="modal-header">
-                <h5 class="modal-title" id="editWorkModalLabel_{{ workday.0.pk }}">Confirm work stop?</h5>
+                <h5 class="modal-title" id="selectRecordEditModalLabel_{{ workday.0.pk }}">Select an record to edit</h5>
               </div>
               <div class="modal-body">
                 Select an record to edit
@@ -130,11 +145,40 @@ Dashboard | Vidicode Timesheets
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-                <a class="btn btn-success" href="#">Confirm</a>
+                <button type="button" class="btn btn-success confirmRecordSelect">Confirm</button>
               </div>
             </div>
           </div>
         </div>
+        {% for record in workday.1 %}
+        <div class="modal fade" id="editRecordModal_{{ record.pk }}" tabindex="-1" aria-labelledby="editRecordModalLabel_{{ record.pk }}" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered text-start">
+            <div class="modal-content bg-dark">
+              <form action="{% url 'edit_record' record.pk %}" method="POST">
+                {% csrf_token %}
+                <div class="modal-header">
+                  <h5 class="modal-title" id="editRecordModalLabel_{{ record.pk }}">Edit record</h5>
+                </div>
+                <div class="modal-body">
+                  <label for="project-select" class="form-label">Select a Project for this Record:</label>
+                  <select class="form-select bg-dark text-light mb-3" name="project" required>
+                    <option value="" selected>Select a Project</option>
+                    {% for project in projects %}
+                    <option value="{{ project.pk }}" {% if record.project.pk == project.pk %}selected{% endif %}>{{ project.name }}</option>
+                    {% endfor %}
+                  </select>
+                  <label for="summary" class="form-label">Work summary:</label>
+                  <textarea name="summary" id="summary" class="form-control bg-dark text-white" cols="30" rows="10" placeholder="Feature: Summary" required>{{ record.summary }}</textarea>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-success">Confirm</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
         <button class="btn btn-sm btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteRecordModal_{{ workday.0.pk }}">
           <svg class="bi mb-1" fill="currentColor" width="16" height="16"><use xlink:href="#trash"></use></svg>
         </button>
@@ -328,6 +372,13 @@ Dashboard | Vidicode Timesheets
       var select = $(this).parent().prev().children('.form-select');
       var selectedId = select.val();
       window.location.href = '/delete_work/' + selectedId + '/';
+    });
+    $('.confirmRecordSelect').click(function() {
+      var select = $(this).parent().prev().children('.form-select');
+      var selectedId = select.val();
+      console.log('editWorkModal_' + selectedId);
+      $(this).parent().parent().parent().parent().modal('hide')
+      $('#editRecordModal_' + selectedId).modal('toggle');
     });
   })
 </script>
