implement user settings fix records summaries display in workers timesheets

--- a/wwwdj/templates/base.html
+++ b/wwwdj/templates/base.html
@@ -84,7 +84,7 @@
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
               <li><h6 class="dropdown-header">User Management</h6></li>
               <li>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="{% url 'user_settings' %}">
                   <svg class="bi me-2" fill="currentColor" width="16" height="16"><use xlink:href="#toggles"></use></svg>Settings
                 </a>
               </li>
